Fixed CSS grid overlap

--- a/client/src/styles/Carousel.css
+++ b/client/src/styles/Carousel.css
@@ -14,8 +14,8 @@
 .carousel-container{
   margin: auto auto;
   height: 100%;
-  position: relative;
-  /* display: flex; */
+  position: sticky;
+
   overflow: hidden;
 
 }
@@ -23,9 +23,10 @@
 
 .track{
   padding: 0;
-  margin: 0;
+  margin: auto auto;
   height: 100%;
   transition: transform 250ms;
+  align-items: center;
 }
 
 .flexbox-container-carousel {
