--- a/client/src/styles/Modal.css
+++ b/client/src/styles/Modal.css
@@ -29,7 +29,6 @@
   display: grid;
   overflow: hidden;
   grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 60px;
   grid-auto-flow: row;
 
 }
